<resources>
    <string name="app_name">Project</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_contact">Info</string>

    <string name="menu_dice">Dice</string>
    <string name="menu_character">Characters</string>
    <string name="menu_rules">Rules</string>

    <string name="dice_name_D4" translatable="false">D4</string>
    <string name="dice_name_D6" translatable="false">D6</string>
    <string name="dice_name_D8" translatable="false">D8</string>
    <string name="dice_name_D10" translatable="false">D10</string>
    <string name="dice_name_D12" translatable="false">D12</string>
    <string name="dice_name_D20" translatable="false">D20</string>

    <string name="content_img_dice">Dice Image</string>
    <!-- Preference Titles -->
    <string name="messages_header">Appearance</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>

    <!-- Sync Preferences -->

    <string name="txt_welcome">"This application has been developed for the "</string>
    <string name="prefLanguage">Language</string>

    <string name="add_name">Name</string>
    <string name="menu_add_character">Character Sheet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="add_char">Add Character Button</string>
    <string name="btnAdd">Apply</string>
    <string name="txtDesc">Character Description</string>
    <string name="txtName">Name</string>
    <string name="txtBorn">Date of birth</string>
    <string name="prefDarkMode">Dark Mode</string>

    <string name="dialogTitle">What do you want to do?</string>
    <string name="dialogEdit">Edit Character</string>
    <string name="dialogDelete">Delete Character</string>
    <string name="navTitle" translatable="false">DnD</string>
</resources>