<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_dice">

    <fragment
        android:id="@+id/nav_dice"
        android:name="com.ubedaPablo.proyecto.ui.dice.DiceFragment"
        android:label="@string/menu_dice"
        tools:layout="@layout/fragment_dice" />

    <fragment
        android:id="@+id/nav_character"
        android:name="com.ubedaPablo.proyecto.ui.characters.CharacterFragment"
        android:label="@string/menu_character"
        tools:layout="@layout/fragment_character" />

    <fragment
        android:id="@+id/nav_rules"
        android:name="com.ubedaPablo.proyecto.ui.rules.RulesFragment"
        android:label="@string/menu_rules"
        tools:layout="@layout/fragment_rules" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.ubedaPablo.proyecto.ui.SettingsFragment"
        android:label="SettingsFragment" />
    <fragment
        android:id="@+id/addCharFragment"
        android:name="com.ubedaPablo.proyecto.ui.characters.CharSheetFragment"
        android:label="@string/menu_add_character"
        tools:layout="@layout/fragment_add_char" />
</navigation>